--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	<style>
 	body{
-	background-color:#333;
+	background-color:#333333;
 	color:white
 	}
 	</style>
@@ -16,6 +16,7 @@
 	<br>
 	<hr>
 	<h4>Hello, my name is srinivas and I’ve been working as a software engineer for over 10 years. I specialize in Java and Python programming languages and have extensive experience in developing software for large-scale applications. I am passionate about staying up-to-date with the latest technologies and trends in the industry. My goal is to use my experience to continue to build innovative and efficient software solutions that help drive business success.</h4>
+	<a href="https://www.instagram.com/_srinu_099">here</a> to see my instagram profile
 	<hr>
 	</body>
 	
